fix styling on small device, change mobile view to around 900px as it has too many menu

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -36,13 +36,18 @@ grow-2 {
   flex-grow: 2;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 .main-typed {
-  width: 56vw;
-  height: 20vh;
+  width: 80%;
+  height: 22vh;
 }
 
 .top-header {
   .logo {
+    display: none;
     width: 370px;
     padding-top: 30px;
     img {
@@ -1079,6 +1084,15 @@ footer {
   }
   .main-header nav ul li a {
     font-size: 16px;
+    margin-right: 30px;
+  }
+  .main-header nav ul li a:after {
+    margin-left: 14px;
+    bottom: 3px;
+  }
+  .main-typed {
+    width: 50vw;
+    height: 17vh;
   }
   #particles-js .centered h1 {
     margin-top: 70px;
@@ -1141,13 +1155,6 @@ footer {
     padding-top: 25px;
     padding-bottom: 25px;
   }
-  .main-header nav ul li a {
-    margin-right: 30px;
-  }
-  .main-header nav ul li a:after {
-    margin-left: 14px;
-    bottom: 3px;
-  }
   .about-us-page .about-title {
     font: 700 32px/50px Poppins;
   }
@@ -1200,6 +1207,22 @@ footer {
 @media (max-width: 1199px) {
   #particles-js {
     min-height: 85vh;
+  }
+  .main-header {
+    nav {
+      div {
+        img {
+          width: 140px;
+        }
+      }
+    }
+  }
+  .main-typed {
+    width: 70vw;
+    height: 16vh;
+  }
+  #particles-js .centered h1 {
+    font: 600 40px/54px Poppins;
   }
   .product-header .product-centered h1 {
     font: 700 32px/48px Poppins;
@@ -1298,9 +1321,7 @@ footer {
 
 @media (min-width: 768px) and (max-width: 991px) {
   #particles-js .centered h1 {
-    margin-top: 60px;
-    margin-bottom: 30px;
-    font: 600 40px/59px Poppins;
+    font: 600 36px/48px Poppins;
   }
   #particles-js .centered p {
     margin-bottom: 30px;
@@ -1331,6 +1352,46 @@ footer {
 }
 
 @media (max-width: 991px) {
+  .top-header {
+    position: relative;
+    z-index: 3;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .hamburger-btn {
+      display: block !important;
+      padding-top: 30px;
+    }
+    .logo {
+      display: block !important;
+      width: 300px;
+    }
+  }
+  .main-header {
+    display: none;
+    z-index: 3;
+    position: relative;
+    nav {
+      div {
+        img {
+          display: none;
+        }
+      }
+      ul {
+        flex-direction: column;
+        text-align: center;
+        li {
+          a {
+            margin-right: 0 !important;
+            padding: 10px 0;
+            &:after {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
   .people-columns {
     position: static;
   }
@@ -1460,9 +1521,14 @@ footer {
   #particles-js {
     padding-bottom: 100px;
   }
+  .main-typed {
+    width: 70vw;
+    height: 18vh;
+  }
   #particles-js .centered p {
     margin-bottom: 20px;
     font: 300 20px/32px Lato;
+    text-align: justify;
   }
   .top-header .logo {
     width: 200px;
@@ -1489,38 +1555,6 @@ footer {
       margin-top: 50px;
     }
   }
-  .top-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    .hamburger-btn {
-      display: block !important;
-      padding-top: 30px;
-    }
-    .logo {
-      // width: 300px;
-    }
-  }
-  .main-header {
-    display: none;
-    z-index: 3;
-    position: relative;
-    nav {
-      ul {
-        flex-direction: column;
-        text-align: center;
-        li {
-          a {
-            margin-right: 0 !important;
-            padding: 10px 0;
-            &:after {
-              display: none;
-            }
-          }
-        }
-      }
-    }
-  }
   .centered {
     h1 {
       font: 600 40px/50px Poppins;
@@ -1536,6 +1570,17 @@ footer {
 }
 
 @media (max-width: 576px) {
+  .top-header {
+    .logo {
+      img {
+        display: block;
+      }
+    }
+  }
+  .main-typed {
+    width: 90vw;
+    height: 24vh;
+  }
   .submit {
     display: flex;
     justify-content: center;
@@ -1548,7 +1593,7 @@ footer {
   #particles-js {
     .centered {
       h1 {
-        font: 600 25px/39px Poppins;
+        font: 600 34px/46px Poppins;
         margin-top: 80px;
         margin-bottom: 30px;
       }
